--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ a:hover {
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background-color: #83b8f9fc;
   width: fit-content;
   max-height: 0;
   overflow: hidden;
@@ -354,6 +354,7 @@ section {
   flex-direction: row;
   gap: 2.5rem;
   justify-content: space-around;
+  /* height: 100%; */
 }
 
 article {
@@ -470,7 +471,8 @@ footer p {
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
-  height: 100%;
+  /* height: 100%; */
+  width: 100%;
 }
 button{
   margin-top: auto; 
@@ -488,4 +490,13 @@ button{
   width: 100%;
   height: auto;
   object-fit: contain;
+}
+
+.details-container-experience .article-container{
+  height: 100%;
+}
+
+
+#profile{
+  position: relative;
 }
