--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ a:hover {
 
 section {
   padding-top: 4vh;
-  height: 96vh;
+  min-width: 96vh;
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
@@ -285,6 +285,9 @@ section {
   gap: 2rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
+  /* flex-wrap: wrap; */
+  overflow: auto;
+  justify-content: center;
 }
 
 .about-details-container {
@@ -354,7 +357,7 @@ section {
   flex-direction: row;
   gap: 2.5rem;
   justify-content: space-around;
-  /* height: 100%; */
+
 }
 
 article {
@@ -470,9 +473,9 @@ footer p {
   padding: 30px 40px;
   display: flex;
   flex-direction: column;
-  flex: 1 1 auto;
-  /* height: 100%; */
-  width: 100%;
+  height: 100%;
+  max-width: 250px;
+  min-width: 250px;
 }
 button{
   margin-top: auto; 
@@ -500,3 +503,4 @@ button{
 #profile{
   position: relative;
 }
+
