--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ section {
   justify-content: center;
   gap: 5rem;
   height: 80vh;
+  position: relative;
 }
 .section__pic-container,
 .section__text {
@@ -473,7 +474,7 @@ footer p {
   padding: 30px 40px;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  /* height: 100%; */
   max-width: 250px;
   min-width: 250px;
 }
