--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ a:hover {
 
 section {
   padding-top: 4vh;
-  min-width: 96vh;
+  height: 96vh;
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
