--- a/style.css
+++ b/style.css
@@ -270,7 +270,9 @@ section {
 
 .btn-color-2:hover {
   border: rgb(255, 255, 255) 0.1rem solid;
+  scale: 1.2;
 }
+
 
 .btn-container {
   gap: 1rem;
